<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".accountsetup.fragments.PasswordFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:letterSpacing="0.01"
        android:textColor="@color/white"
        android:text="Create Password for App"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:id="@+id/createPass"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/createPass"
        android:orientation="vertical"
        android:id="@+id/importWalletLL"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:letterSpacing="0.01"
            android:textColor="@color/white"
            android:text="@string/setup_your_password"
            android:layout_marginTop="45dp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="Password"
            android:textColorHint="#C5C5C5"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/password"
            android:background="@drawable/outlined_16dp_et_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:letterSpacing="0.01"
            android:textColor="@color/white"
            android:text="Confirm Your Password"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="Password"
            android:id="@+id/passwordConfirm"
            android:textColorHint="#C5C5C5"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/outlined_16dp_et_bg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:letterSpacing="0.01"
            android:textColor="@color/white"
            android:text="@string/this_password_i"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-thin"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:letterSpacing="0.01"
        android:textColor="@color/white"
        android:text="@string/import_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="45dp"
        android:id="@+id/create_wallet"
        android:background="@drawable/filled_24dp_btn_bg"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>