<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3643"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/curr_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/network_bg"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_circle_24" />

        <TextView
            android:id="@+id/connecting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connecting..."
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_keyboard_arrow_down_24" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/curr_network">

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_bold_700"
            android:text="Account 1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/balance_ll"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/connecting_tv">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/ethereum_logo"
                android:src="@mipmap/ethereum_logo" />

            <TextView
                android:id="@+id/ethereum_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/poppins_bold_700"
                android:text="0.00 ETH"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/network_bg"
            android:padding="10dp"
            android:text="0x00...000"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_receive_buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header_ll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/sendBtn"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:rotation="45"
                android:src="@mipmap/send"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:rotation="180"
                android:src="@mipmap/send"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/receive"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/send_receive_buttons_ll">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_semibold_600"
            android:letterSpacing="0.02"
            android:id="@+id/activityyy"
            android:text="@string/activity"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_light" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactions_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity" />

</androidx.constraintlayout.widget.ConstraintLayout>